Fix nav spacing when in Tablet view

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,10 @@ nav li {
     display: inline;
 }
 
+nav a {
+    margin: 0;
+}
+
 main {
     width: 100%;
     margin: auto;
@@ -71,7 +75,6 @@ marquee {
     width: 60%;
     max-width: 325px;
     min-width: 150px;
-    margin: auto;
 }
 
 main li {
@@ -93,6 +96,20 @@ aside {
     padding: 1em;
 }
 
+@media (max-width: 768px) {
+    header li img {
+        width: 15%;
+        height: auto;
+        display: inline;
+    }
+    ul {
+        margin: auto;
+    }
+    main li {
+        padding-left: 1.2em;
+    }
+}
+
 @media (min-width: 800px) {
     header {
         float: left;
@@ -110,22 +127,6 @@ aside {
     }
 }
 
-@media (max-width: 750px) {
-    header li img {
-        width: 15%;
-        height: auto;
-        display: inline;
-    }
-    nav a {
-        margin: 0;
-    }
-    ul {
-        margin: auto;
-    }
-    main li {
-        padding-left: 1.2em;
-    }
-}
 
 a {
     text-decoration: none;
